# t113-s3-bare-metal-rt-thread

./: .gitignore  .gitmodules  CMakeLists.txt
app/: app.c  pong.c
app/board/: board.c  board.h  drv_uart.c  drv_uart.h  link.lds  rtconfig.h  secondary_cpu.c
app/lib/: log.c  log.h
lib/rt-thread-cmake/: CMakeLists.txt  build.log.txt
